# xTTS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
app/: __init__.py  auth.py  cache.py  config.py  metrics.py  models.py  rate_limit.py  text_utils.py  tts_engine.py
app/routes/: __init__.py  system.py  tts.py
static/: index.html
tests/: test_api.py  test_text_utils.py
